--- a/plop-templates/container/Container.js.hbs
+++ b/plop-templates/container/Container.js.hbs
@@ -1,12 +1,8 @@
 import React from 'react';
-import { {{pascalCase name}}Container } from './{{pascalCase name}}Styled'
+import * as S from './{{pascalCase name}}Styled';
 
-const {{pascalCase name}} = props => {
-  return (
-    <{{pascalCase name}}Container>
-        {{pascalCase name}} works!
-    </{{pascalCase name}}Container>
-  );
+const {{pascalCase name}} = () => {
+  return <S.{{pascalCase name}}Container>{{pascalCase name}} works!</S.{{pascalCase name}}Container>;
 };
 
 export default {{pascalCase name}};
