--- a/plop-templates/container/ContainerStyle.js.hbs
+++ b/plop-templates/container/ContainerStyle.js.hbs
@@ -1,6 +1,7 @@
-import styled from 'styled-components'
+import styled from 'styled-components';
 
 const {{pascalCase name}}Container = styled.div`
-    display: flex;
-`
-export { {{pascalCase name}}Container }
+  display: flex;
+`;
+
+export { {{pascalCase name}}Container };
